--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=workshopmongo
+spring.data.mongodb.uri=mongodb://localhost:27017/mongo_database
+spring.data.mongodb.username=
+spring.data.mongodb.password=
