--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/mongo_database
-spring.data.mongodb.username=
-spring.data.mongodb.password=
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/mongo_database
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
